# mariadb-columnstore-engine-fork

./: .drone.jsonnet  CMakeLists.txt  VERSION
cmake/: FindReadline.cmake  boost.cmake  clang-tidy.cmake  thrift.cmake
cmapi/: CMakeLists.txt  requirements.txt
cmapi/mcs_cluster_tool/: README.md  README_DEV.md  __main__.py  cluster_app.py  mcs.1
cmapi/scripts/: mcs_backup_manager.sh
core_dumps/: upgrade_setup_deb.sh
datatypes/: mcs_datatype.h  mcs_datatypes_constants.h  mcs_decimal.cpp  mcs_decimal.h  mcs_float128.h  mcs_int128.cpp  mcs_int128.h  mcs_int64.h  numericliteral.h
dbcon/ddlpackage/: ddl.l  ddl.y  ddlpkg.cpp  ddlpkg.h  sqlparser.cpp  sqlparser.h
dbcon/dmlpackageproc/: dmlpackageprocessor.h
dbcon/execplan/: CMakeLists.txt  aggregatecolumn.cpp  arithmeticoperator.h  calpontselectexecutionplan.cpp  (+10 more)
debian/: mariadb-plugin-columnstore.install
dmlproc/: dmlproc.cpp
exemgr/: CMakeLists.txt  main.cpp
primitives/linux-port/: CMakeLists.txt  column.cpp  dictionary.cpp  primitiveprocessor.cpp  primitiveprocessor.h
procmgr/: processmanager.cpp
procmon/: processmonitor.cpp
tests/: CMakeLists.txt  col16block.h  col1block.h  col2block.h  col4block.h  col8block.h  counting_allocator.cpp  em-shmem-remap-failure.cpp  heaporderby-tests.cpp  poolallocator.cpp  primitives_column_scan_and_filter.cpp  primitives_coursework_bench.cpp  primitives_scan_bench.cpp  primitives_tensor_scan_bench.cpp  rowgroup-tests.cpp  simd_processors.cpp  tvm_column_scan_and_filter.cpp  tvm_fixed_params_scan.cpp
utils/messageqcpp/: CMakeLists.txt  bytestream.cpp  bytestream.h  cli.cpp  compressed_iss.cpp  inetstreamsocket.cpp  messagequeue.cpp  samenodepseudosocket.h  srv.cpp
(+240 files in other folders)
